--- a/css/style.css
+++ b/css/style.css
@@ -198,7 +198,7 @@ progress {
     font-size: 12px;
 }
 
-.tinto,.merlot, .cabert_sauvignon, .brut, .branco, .sauvignon_blanc{
+.tinto,.merlot,.cerveja, .cabert_sauvignon, .brut, .branco, .sauvignon_blanc{
     font-weight: bold;
     color: #fff;
     padding: 5px;
@@ -215,6 +215,10 @@ progress {
 /* TAGS */
 .tinto{
     background-color: #722f37;
+}
+
+.cerveja{
+    background-color: green;
 }
 
 .cabert_sauvignon{
