--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ body{
 
 header{
     display: flex;
-    justify-content: space-around;
+    /* justify-content: space-around; */
+    justify-content: left;
     align-items: center;
     width: 95%;
     padding: 10px;
@@ -19,11 +20,12 @@ header{
 /* LOGO LOJA */
 .logo__loja{
     width: 50px;
+    margin: 0 15%;
 }
 
 /* CAIXA DE PESQUISA */
 .combo__pesquisa{
-    width: 20%;
+    width: 25%;
     padding: 5px;
     height: 20px;
     border-radius: 5px;
