--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ header{
 }
 
 .pagar{
+    display: none;
     margin-left: 20px;
     padding: 10px 20px;
     border-radius: 10px;
@@ -61,7 +62,7 @@ header{
 /* MAIN */
 main{
     width: 100%;
-    background-color: #abf5ff;
+    background-color: white;
 }
 
 .area__principal{
@@ -85,7 +86,7 @@ main{
 .garrafas{
     grid-column: 2/3;
     grid-row: 1/3;
-    background-color: #abf5ff4e;
+    background-color: #eff7f6;
     display: flex;
     flex-wrap: wrap;
 }
@@ -278,17 +279,17 @@ progress {
     padding: 5px;
     margin-top: 5px;
     color: #ffffff;
-    background-color: #007ad9;
+    background-color: rgb(224, 187, 0);
     border-radius: 5px;
 }
 
 .botao_adicionar:hover{
-    background-color: #1f9effcf;
+    background-color:  rgb(255, 213, 0);
     cursor: pointer;
 }
 
 .botao_adicionar:active{
-    background-color: #177d40c5;
+    background-color: green;
     cursor: pointer;
 }
 
