--- a/css/style.css
+++ b/css/style.css
@@ -147,34 +147,21 @@ main{
     width: 100%;
 }
 
-progress {
-    background-color: #ffffff;
-    border-radius: 5px;
-    box-shadow: 3px 3px 3px #C0C0C0;
-    padding: 3px;
-    width: 80%;
+.container { 
+    background-color: rgb(192, 192, 192); 
+    width: 100%; 
+    border-radius: 15px;
+    
+} 
 
-    }
-
-    .container { 
-        background-color: rgb(192, 192, 192); 
-        width: 100%; 
-        border-radius: 15px; 
-    } 
-
-    .skill { 
-        background-color: #007ad9; 
-        color: white; 
-        padding: 2px; 
-        text-align: right; 
-        font-size: 10px; 
-        border-radius: 15px;
-    } 
-
-    .valorBarraProgresso { 
-        width: 80%; 
-        
-    } 
+.skill { 
+    background-color: #007ad9; 
+    color: white; 
+    padding: 2px; 
+    text-align: right; 
+    font-size: 15px; 
+    border-radius: 15px;
+}
 
 /* META */
 
@@ -303,8 +290,9 @@ progress {
     width: 98%;
     padding: 5px;
     margin-top: 5px;
+    font-weight: bold;
     color: #ffffff;
-    background-color: rgb(200, 26, 121);
+    background-color: #007ad9;
     border-radius: 5px;
 }
 
@@ -314,7 +302,7 @@ progress {
 }
 
 .botao_adicionar:active{
-    background-color: #007ad9;
+    background-color: green;
     cursor: pointer;
 }
 
