--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,7 @@ main{
 
 .top__usuario{
     display: flex;
+    border-bottom: 1px solid rgb(192, 192, 192);
 }
 
 .top__usuario img{
@@ -191,24 +192,24 @@ main{
 
 /* CARD GARRAFA */
 .card__garrafa{
-    width: 200px;
-    max-height: 404px;
+    width: 180px;
+    max-height: 324px;
     text-align: center;
     padding: 15px;
     background-color: #ffffff;
     border-radius: 5px;
     box-shadow: 1px 1px #c3c3c3;
-    margin: 20px;
+    margin: 5px;
 }
 
 .garrafa__imagem{
     width: 100%;
-    height: 220px;
+    height: 140px;
     margin: auto;
 }
 
 .garrafa__imagem img{
-    max-height: 200px;
+    max-height: 140px;
 }
 
 .card__garrafa h1{
