--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,14 @@ header{
     border-radius: 5px;
 }
 
+/* TOTAL DA COMPRA */
+
+.carrinho p{
+    color: green;
+    font-weight: bold;
+    font-size: 20px;
+}
+
 /* PIX */
 .card__pagamento{
     display: flex;
@@ -51,13 +59,13 @@ header{
 }
 
 .pagar{
-    display: none;
     margin-left: 20px;
     padding: 10px 20px;
     border-radius: 10px;
     background-color: #007ad9;
     color: white;
     font-weight: bold;
+    text-decoration: none;
 }
 
 /* MAIN */
@@ -68,7 +76,7 @@ main{
 
 .area__principal{
     display: grid;
-    grid-template-columns: 300px 1fr;
+    grid-template-columns: 300px 1fr 250px;
     grid-template-rows: 300px 1fr;
 }
 
@@ -91,6 +99,11 @@ main{
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
+}
+
+.meta{
+    grid-column: 3/4;
+    grid-row: 1/3;
 }
 
 /* FILTROS */
@@ -179,6 +192,7 @@ main{
     background-color: #e0e0e0;
     color: #000000;
     border-radius: 10px;
+    margin-bottom: 10px;
 }
 
 .fogao__imagem{
@@ -188,7 +202,7 @@ main{
 }
 
 .fogao__imagem img{
-    max-height: 220px;
+    max-height: 180px;
 }
 
 /* CARD GARRAFA */
@@ -333,7 +347,7 @@ header{
 
 
 /* .combo__pesquisa,  */
-.meta{
+.pagar{
     display: none;
 }
 
