--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ main{
     
 }
 
-.filtros, .top, .meta{
+.top, .meta{
     background-color: #ffffff;
     border-radius: 20px;
     margin: 20px;
@@ -108,27 +108,11 @@ main{
 
 /* FILTROS */
 
-.filtros{
-    padding: 15px;
-    text-align: center;
-    display: none;
-}
-
-.filtros h2{
-    font-size: large;
-    font-weight: bold;
-    padding: 5px;
-    background-color: #e0e0e0;
-    color: #000000;
-    border-radius: 10px;
-    margin-bottom: 5px;
-}
-
 
 /* TOP */
 
 .top{
-    padding: 15px;
+    padding: 5px;
     text-align: center;
 }
 
