--- a/css/style.css
+++ b/css/style.css
@@ -83,10 +83,12 @@ main{
 .filtros_top{
     grid-column: 1/2;
     grid-row: 1/3;
+    gap: 1px;
+    background-color:  #eff7f6;
     
 }
 
-.top, .meta{
+.top{
     background-color: #ffffff;
     border-radius: 20px;
     margin: 20px;
@@ -101,9 +103,11 @@ main{
     align-content: flex-start;
 }
 
-.meta{
+.meta_area{
     grid-column: 3/4;
     grid-row: 1/3;
+    background-color:  #eff7f6;
+    
 }
 
 /* FILTROS */
@@ -167,6 +171,10 @@ main{
 .meta{
     padding: 15px;
     text-align: center;
+    gap: 2px;
+    background-color: #fff;
+    border-radius: 15px;
+    margin: 10px;
 }
 
 .meta h2{
